Spacing scale fix. Was using text and not itself

--- a/assets/scss/base/_globals.scss
+++ b/assets/scss/base/_globals.scss
@@ -56,17 +56,19 @@
 	--letter-spacing-body: normal;
 	--letter-spacing-heading: var(--letter-spacing-body);
 
-	--spacing-xxxxs: calc(var(--text-xxxs) / var(--text-scale-ratio));
-	--spacing-xxxs: calc(var(--text-xxs) / var(--text-scale-ratio));
-	--spacing-xxs: calc(var(--text-xs) / var(--text-scale-ratio));
-	--spacing-xs: calc(var(--text-sm) / var(--text-scale-ratio));
-	--spacing-sm: calc(var(--text-md) / var(--text-scale-ratio));
+	--spacing-scale-ratio: 1.25;
+
+	--spacing-xxxxs: calc(var(--spacing-xxxs) / var(--spacing-scale-ratio));
+	--spacing-xxxs: calc(var(--spacing-xxs) / var(--spacing-scale-ratio));
+	--spacing-xxs: calc(var(--spacing-xs) / var(--spacing-scale-ratio));
+	--spacing-xs: calc(var(--spacing-sm) / var(--spacing-scale-ratio));
+	--spacing-sm: calc(var(--spacing-md) / var(--spacing-scale-ratio));
 	--spacing-md: 16px;
-	--spacing-lg: calc(var(--text-md) * var(--text-scale-ratio));
-	--spacing-xl: calc(var(--text-lg) * var(--text-scale-ratio));
-	--spacing-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
-	--spacing-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
-	--spacing-xxxxl: calc(var(--text-xxxl) * var(--text-scale-ratio));
+	--spacing-lg: calc(var(--spacing-md) * var(--spacing-scale-ratio));
+	--spacing-xl: calc(var(--spacing-lg) * var(--spacing-scale-ratio));
+	--spacing-xxl: calc(var(--spacing-xl) * var(--spacing-scale-ratio));
+	--spacing-xxxl: calc(var(--spacing-xxl) * var(--spacing-scale-ratio));
+	--spacing-xxxxl: calc(var(--spacing-xxxl) * var(--spacing-scale-ratio));
 
 	--row-gap: var(--spacing-md);
 	--column-gap: var(--spacing-md);
